<resources>
    <string name="app_name">SPARQ TH</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="events">Events</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="logout">Log Out</string>
    <string name="other">Other</string>

    <string name="vote_recorded">Vote recorded</string>
    <string name="func_added_soon">Functionality will be added soon</string>
    <string name="message_send">Message Sent</string>
    <string name="new_question">Post Question</string>
    <string name="empty_question_msg">Please enter a valid question</string>
    <string name="empty_field_msg">Field cannot be empty</string>
    <string name="long_question_msg">Only 160 characters allowed</string>
    <string name="ans_recorded">Answer recorded</string>
    <string name="question_recorded">Your question has been recorded</string>
    <string name="no_answer">No Answer has arrived for the given question</string>
    <string name="has_answered">This Questionare has already been answered</string>
    <string name="poll_question_prompt">Question Type</string>
    <string name="invalid_code">Invalid code</string>
    <string name="invalid_address">Invalid address</string>

    <string-array name="poll_question_types">
        <item>MCQ</item>
        <item>Multiple MCQ</item>
        <item>Short Answer</item>
    </string-array>

    <string name="enter_option">Enter an option</string>
    <string name="more_options">Should have more options</string>
    <string name="about_text">Welcome to SPARQ. Hope you like the ad-hoc response system
        we have built as part of our final semester project.
        We look forward to hearing your feedback.</string>
    <string name="title_activity_event">Event Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_converstaion_thread">Forums</string>
    <string name="title_activity_answer">Answer</string>
    <string name="title_activity_questionare">Questionare</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Main Activity</string>

    <string name="new_event">New Event</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="title_activity_new_questionare_acticity">NewQuestionareActicity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_data_available">Start a conversation</string>
    <string name="title_activity_poll_results">PollResultsActivity</string>
    <string name="title_activity_poll_results_per_question">PollResultsPerQuestionActivity</string>
</resources>
