<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/events" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
